--- a/control/lqr_lateral_controller/package.xml
+++ b/control/lqr_lateral_controller/package.xml
@@ -17,7 +17,11 @@
   <depend>autoware_auto_control_msgs</depend>
   <depend>autoware_auto_planning_msgs</depend>
   <depend>geometry_msgs</depend>
-  
+  <depend>vehicle_info_util</depend>
+  <depend>motion_utils</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
+
   <test_depend>ament_cmake_ros</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>autoware_lint_common</test_depend>
